# 3D_vision

./: .gitignore  README.md
day01/: day01.ipynb
day02/: CMakeLists.txt
day02-04/: day02-04.ipynb
day02-04/src/: day02.cpp
day02-05/: CMakeLists.txt
day02-05/src/: PointCloud.cpp  day05.cpp
day02-05/src/include/: PointCloud.h
day02/src/: day02.cpp
day06-07/: CMakeLists.txt  day06.ipynb
day06-07/src/: day07.cpp
day06-07/src/include/: KDTree.cpp  KDTree.h
day08/: CMakeLists.txt  day08.ipynb
day08/src/: day08.cpp
day08/src/include/: OutlierRemoval.cpp  OutlierRemoval.h
day09/: CMakeLists.txt  day09.ipynb
day09/src/: day09.cpp
day09/src/include/: Voxelization.cpp  Voxelization.h
day10/: CMakeLists.txt  day10.ipynb
day10/src/: day10.cpp
day10/src/include/: PoissonSurfaceSeconstruction.cpp  PoissonSurfaceSeconstruction.h
day11/: CMakeLists.txt  day11.ipynb
day11/src/: day11.cpp
day11/src/include/: Transformation.cpp  Transformation.h
day12/: CMakeLists.txt  day12.ipynb  open3d_tutorial.py
day12/src/: day12.cpp
day12/src/include/: ISSKeypoint.cpp  ISSKeypoint.h
day13/: CMakeLists.txt  day13.ipynb  open3d_tutorial.py
day13/src/: day13.cpp
day13/src/include/: Octree.cpp  Octree.h
day14/: CMakeLists.txt  day14.ipynb
day14-15/src/: day14.cpp
day14-15/src/include/: ICPReg.h
day14/src/: day14.cpp
day14/src/include/: ICPReg.cpp  ICPReg.h
day16/: day16.ipynb
